--- a/public/dashboard/plugins/style.css
+++ b/public/dashboard/plugins/style.css
@@ -132,12 +132,284 @@
 }
 .search-container .ap-input
 {
-    display: inline;
-    width: unset!important;
+    display: inline-block;
     vertical-align: unset!important;
     height: 39px!important;
 }
-.search-container .algolia-places
+.filter-input label
 {
-    width: unset!important;
+    display: none;
 }
+.filter-input .form-group
+{
+    display: inline-block;
+}
+.filter-input,
+.filter-input .form-group,
+.filter-input input,
+.search-container .algolia-places
+
+{
+    margin-bottom: 5px;
+}
+.title-olx
+{
+    font-size: 20px;
+    color: #5b5b5b;
+    line-height: 24px;
+    font-weight: normal;
+    padding: 0px 0px 0px 0px;
+    margin: 0 10px;
+}
+.sub-categories
+{
+    margin: 0 10%;
+}
+.li
+{
+    width: 24%;
+    padding-right: 12px;
+    padding-left: 55px;
+    position: relative;
+    display: inline-block;
+}
+.li .item
+{
+    display: table;
+    width: 100%;
+    height: 48px;
+}
+.li .item a
+{
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 15px;
+    line-height: 20px;
+}
+.li .item a:hover
+{
+    text-decoration: none;
+}
+i.icon--circle
+{
+    font-size: 26px;
+    border-radius: 50px;
+    color: white;
+    padding-top: 10px;
+    width: 45px;
+    height: 45px;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    vertical-align: middle;
+    overflow: visible;
+    margin: 0;
+}
+.li .item a:hover span
+{
+    color: #fff;
+    background-color: #0098d0;
+}
+.filter-input .field
+{
+    display: inline-block;
+}
+.main-category
+{
+    display: table;
+    padding: 5px 5px!important;
+    color: white!important;
+    border-radius: 4px;
+}
+.main-category:hover
+{
+    cursor: pointer;
+}
+.sub-categories
+{
+    display: none;
+    padding: 10px 10px 5px 10px;
+    border: 1px solid #e0dede;
+    border-radius: 10px;
+    background: white;
+}
+.steps .step i
+{
+    line-height: 1;
+    font-size: 2.5em;
+    margin: 0 1rem 0 0;
+    display: block;
+}
+.steps .step.active i
+{
+    color: #007bff!important;
+}
+#myFooter {
+    background-color: #3c3d41;
+    color: white;
+}
+
+#myFooter .footer-copyright {
+    background-color: #333333;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    text-align: center;
+}
+#myFooter .navbar-brand {
+    margin-top: 45px;
+    height: 65px;
+}
+
+#myFooter .footer-copyright p {
+    margin: 10px;
+    color: #ccc;
+}
+
+#myFooter ul {
+    list-style-type: none;
+    padding-left: 0;
+    line-height: 1.7;
+}
+
+#myFooter h5 {
+    font-size: 18px;
+    color: white;
+    font-weight: bold;
+    margin-top: 30px;
+}
+
+#myFooter h2 a{
+    font-size: 50px;
+    text-align: center;
+    color: #fff;
+}
+
+#myFooter a {
+    color: #d2d1d1;
+    text-decoration: none;
+}
+
+#myFooter a:hover,
+#myFooter a:focus {
+    text-decoration: none;
+    color: white;
+}
+
+#myFooter .social-networks {
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 16px;
+}
+
+#myFooter .social-networks a {
+    font-size: 32px;
+    color: #f9f9f9;
+    padding: 10px;
+    transition: 0.2s;
+}
+
+#myFooter .social-networks a:hover {
+    text-decoration: none;
+}
+
+#myFooter .facebook:hover {
+    color: #0077e2;
+}
+
+#myFooter .google:hover {
+    color: #ef1a1a;
+}
+
+#myFooter .twitter:hover {
+    color: #00aced;
+}
+
+#myFooter .btn {
+    color: white;
+    background-color: #d84b6b;
+    border-radius: 20px;
+    border: none;
+    width: 150px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 10px;
+    line-height: 25px;
+}
+
+@media (min-width: 992px){
+
+}
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .direct-chat
+    {
+        width: 400px;
+    }
+    .filter-input,
+    .filter-input .field,
+    .filter-input .form-group,
+    .search-container .algolia-places,
+    .search-container .ui.dropdown
+    {
+        width: 100%;
+    }
+    .li
+    {
+        width: 48%;
+    }
+    .nav-item
+    {
+
+    }
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    .filter-input,
+    .filter-input .field,
+    .filter-input .form-group,
+    .search-container .algolia-places,
+    .search-container .ui.dropdown
+    {
+        width: 48%;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .filter-input,
+    .filter-input .field,
+    .filter-input .form-group,
+    .search-container .algolia-places,
+    .search-container .ui.dropdown
+    {
+        width: 20%;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    .filter-input,
+    .filter-input .field,
+    .filter-input .form-group,
+    .search-container .algolia-places,
+    .search-container .ui.dropdown
+    {
+        width: 20%;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .filter-input,
+    .filter-input .field,
+    .filter-input .form-group,
+    .search-container .algolia-places,
+    .search-container .ui.dropdown
+    {
+        width: 20%;
+    }
+}
+
